src/test/ui/error-codes/E0005.stderr
error[E0005]: refutable pattern in local binding: `None` not covered
  --> $DIR/E0005.rs:3:9
   |
LL |     let Some(y) = x;
   |         ^^^^^^^ pattern `None` not covered
   |
   = note: `let` bindings require an "irrefutable pattern", like a `struct` or an `enum` with only one variant
   = note: for more information, visit https://doc.rust-lang.org/book/ch18-02-refutability.html
note: `Option<i32>` defined here
  --> $SRC_DIR/core/src/option.rs:LL:COL
   |
LL | / pub enum Option<T> {
LL | |     /// No value.
LL | |     #[lang = "None"]
LL | |     #[stable(feature = "rust1", since = "1.0.0")]
LL | |     None,
   | |     ^^^^ not covered
...  |
LL | |     Some(#[stable(feature = "rust1", since = "1.0.0")] T),
LL | | }
   | |_-
   = note: the matched value is of type `Option<i32>`
help: you might want to use `if let` to ignore the variant that isn't matched
   |
LL |     let y = if let Some(y) = x { y } else { todo!() };
   |     ++++++++++                 ++++++++++++++++++++++
help: alternatively, on nightly, you might want to use `#![feature(let_else)]` to handle the variant that isn't matched
   |
LL |     let Some(y) = x else { todo!() };
   |                     ++++++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0005`.
